syntax = "proto3";

option java_outer_classname = "OrderProtos";
option java_package = "ru.phystech.bench.generated";

message Order {
  int64 orderID = 1;
  int64 consumerID = 2;
  repeated int64 positionsIDs = 3;
  int64 date = 4;
  string description = 5;
}